[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0", features = ["cuda"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tfhe = { version = "0.6", features = ["integer", "x86_64-unix", "gpu"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
bincode = "1.3"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8"
rusqlite = "0.31"
sha2 = "0.10"
rayon = "1.12.0"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "benchmark_v2"
path = "src/bin/benchmark_v2.rs"

[[bin]]
name = "benchmark_v3_pir"
path = "src/bin/benchmark_v3_pir.rs"

[[bin]]
name = "benchmark_pre"
path = "src/bin/benchmark_pre.rs"

[[bin]]
name = "benchmark_v4_pir2d"
path = "src/bin/benchmark_v4_pir2d.rs"


